<resources>
    <string name="app_name">Crime RS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dados Criminais</string>
    <string name="nav_header_subtitle">Rio grande do Sul</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_bo">Crie seu B.O</string>

    <string name="menu_home">Newsletter</string>
    <string name="menu_geral">Dados Gerais</string>
    <string name="menu_gallery">Cidades por Tipo de Crime</string>
    <string name="menu_slideshow">Tipos de Crimes por Cidade</string>
    <string name="textViewTitleCrimes">Totais de Crimes no RS 2020</string>
    <string name="textViewTitleCidades">Totais de Crimes por Cidade 2020</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TituloAberturaOcorrencia">Formulário de Ocorrência</string>
    <string name="BoletimNome">Nome</string>
    <string name="BoletimCpf">CPF</string>
    <string name="BoletimDataNasc">Data Nascimento</string>
    <string name="BoletimAssunto">Assunto Ocorrência</string>
    <string name="BoletimDescricaoOcorrencia">Descreva o Ocorrido</string>
    <string name="BoletimDataOcorrencia">Data do Ocorrido</string>
    <string name="BotaoOcorrencia">Gerar Ocorrência</string>
    <string name="Titulosplash">CRIME-RS</string>
    <string name="title_activity_map_dados_cidades">Map</string>
    <string name="BtnAbrirMapa">Visualização dos Dados em Mapa</string>
    <string name="BtnLogin">Efetuar Login</string>
    <string name="TituloAbrirLoginOcorrencia">Para abrir um boletim de ocorrência é necessário efetuar login</string>
    <string name="title_activity_maps">Map</string>


</resources>