<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/TituloAberturaOcorrencia"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:id="@+id/BoletimNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:contentDescription="@string/BoletimNome"
            android:ems="10"
            android:hint="@string/BoletimNome"
            android:imeActionLabel="@string/BoletimNome"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <EditText
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:id="@+id/BoletimCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:contentDescription="@string/BoletimCpf"
            android:ems="10"
            android:hint="@string/BoletimCpf"
            android:imeActionLabel="@string/BoletimCpf"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <EditText
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:id="@+id/BoletimDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:contentDescription="@string/BoletimDataNasc"
            android:ems="10"
            android:hint="@string/BoletimDataNasc"
            android:imeActionLabel="@string/BoletimDataNasc"
            android:inputType="date"
            android:textAlignment="textStart" />

        <EditText
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:id="@+id/BoletimAssunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:contentDescription="@string/BoletimAssunto"
            android:ems="10"
            android:hint="@string/BoletimAssunto"
            android:imeActionLabel="@string/BoletimAssunto"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <EditText
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:id="@+id/BoletimDataOcorrido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:contentDescription="@string/BoletimDataOcorrencia"
            android:ems="10"
            android:hint="@string/BoletimDataOcorrencia"
            android:imeActionLabel="@string/BoletimDataOcorrencia"
            android:inputType="date"
            android:textAlignment="textStart" />

        <EditText
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:id="@+id/BoletimDescricao"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:layout_marginTop="20px"
            android:contentDescription="@string/BoletimDescricaoOcorrencia"
            android:ems="10"
            android:hint="@string/BoletimDescricaoOcorrencia"
            android:imeActionLabel="@string/BoletimDescricaoOcorrencia"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <Button
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:backgroundTint="@color/design_default_color_on_secondary"
            android:text="@string/BotaoOcorrencia" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>